@@ -1134,30 +1134,41 @@ Db.prototype.commit = function(transaction, callback) {
     });
 };
 
-Db.prototype.positionsHigher = function(clusterId, clusterPosition, callback) {
-    var data = {};
-    if (_.isObject(clusterId)) {
-        var ridObj = clusterId;
-        data.clusterId = ridObj.clusterId;
-        data.clusterPosition = ridObj.clusterPosition;
-    } else if (_.isString(clusterId) && (_.isFunction(clusterPosition) || parser.isNullOrUndefined(clusterPosition))) {
-        var ridObj = parser.parseRid(clusterId);
-        data.clusterId = ridObj.clusterId;
-        data.clusterPosition = ridObj.clusterPosition;
-    } else {
-        data.clusterId = clusterId;
-        data.clusterPosition = clusterPosition;
-    }
-    if (_.isFunction(clusterPosition)) {
-        callback = clusterPosition;
-        clusterPosition = null;
-    }
-    callback = callback || EMPTY_FUNCTION;
 
-    this.server.send(OperationTypes.POSITIONS_HIGHER, data, function(err, result) {
+function makePositionFunc(operation) {
+    return function(clusterId, clusterPosition, callback) {
+        var data = {};
+        if (_.isObject(clusterId)) {
+            var ridObj = clusterId;
+            data.clusterId = ridObj.clusterId;
+            data.clusterPosition = ridObj.clusterPosition;
+        } else if (_.isString(clusterId) && (_.isFunction(clusterPosition) || parser.isNullOrUndefined(clusterPosition))) {
+            var ridObj = parser.parseRid(clusterId);
+            data.clusterId = ridObj.clusterId;
+            data.clusterPosition = ridObj.clusterPosition;
+        } else {
+            data.clusterId = clusterId;
+            data.clusterPosition = clusterPosition;
+        }
+        if (_.isFunction(clusterPosition)) {
+            callback = clusterPosition;
+            clusterPosition = null;
+        }
+        callback = callback || EMPTY_FUNCTION;
 
-        if (err) { return callback(err); }
+        if (this.server.manager.serverProtocolVersion < 13) {
+            return callback(new Error("positionsHigher and positionsLower are available since OrientDB 1.3.0"));
+        }
 
-        callback(null, result);
-    });
-};
+        this.server.send(operation, data, function(err, result) {
+
+            if (err) { return callback(err); }
+
+            callback(null, result);
+        });
+    };
+}
+
+Db.prototype.positionsHigher = makePositionFunc(OperationTypes.POSITIONS_HIGHER);
+
+Db.prototype.positionsLower = makePositionFunc(OperationTypes.POSITIONS_LOWER);
